@@ -1,3 +1,8 @@
+2008-01-14  Neal H. Walfield  <neal@gnu.org>
+
+	* sbrk.c: New file.
+	* Makefile.am (libhurd_mm_a_SOURCES): Add sbrk.c.
+
 2008-01-12  Neal H. Walfield  <neal@gnu.org>
 
 	* ia32-exception-entry.S (_exception_handler_end): Remove
